# pytest-invenio

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  constraints-min.txt  constraints-pypi.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/actions/pre-install/: action.yml
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  make.bat  usage.rst
pytest_invenio/: __init__.py  cli.py  database_tools.py  fixtures.py  plugin.py  user.py  version.py  versioning.py
tests/: conftest.py  test_fixtures.py
