# -*- coding: utf-8 -*-
#
# This file is part of pytest-invenio.
# Copyright (C) 2017-2024 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# pytest-invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = pytest-invenio
version = attr: pytest_invenio.__version__
description = Pytest fixtures for Invenio.
long_description = file: README.rst, CHANGES.rst
keywords = invenio pytest
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/pytest-invenio
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    check-manifest>=0.42
    coverage>=5.3,<8
    docker-services-cli>=0.4.0
    # See https://github.com/pytest-dev/pytest-flask/issues/167
    Flask>=1.1.4,<2.3.0
    pytest-cov>=3.0.0
    pytest-flask>=1.2.0
    pytest-github-actions-annotate-failures>=0.2.0
    pytest-isort>=3.0.0
    pytest-pydocstyle>=2.2.3
    pytest-pycodestyle>=2.2.0
    pytest>=6,<7.2.0
    selenium>=4,<5
    importlib-metadata>=4.4,<8.0.0
    importlib-resources>=5.0

[options.extras_require]
tests =
    pytest-black>=0.3.0
    invenio-celery>=1.2.4,<2.0.0
    invenio-db>=1.0.12,<2.0.0
    invenio-files-rest>=1.3.2,<2.0.0
    invenio-mail>=1.0.2,<2.0.0
    invenio-search>=2.1.0,<3.0.0
    sphinx>=4.5
elasticsearch7 =
    invenio-search[elasticsearch7]>=2.1.0,<3.0.0
opensearch1 =
    invenio-search[opensearch1]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0
# Kept for backwards compatibility
docs =

[options.entry_points]
pytest11 =
    invenio = pytest_invenio.plugin

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=pytest_invenio --cov-report=term-missing
testpaths = tests pytest_invenio
live_server_scope = module
